<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/tool_bar"
        style="@style/Toolbar">

        <include layout="@layout/layout_default_toolbar"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@id/modify_user_info_avatar_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_modify_user_information_user_avatar_root_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="@string/avatar"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@id/modify_user_info_avatar_image"
            android:layout_width="@dimen/activity_modify_user_information_avatar_width_height"
            android:layout_height="@dimen/activity_modify_user_information_avatar_width_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/modify_user_info_item_content_margin"
            android:background="@mipmap/splash_activity_bg_1"
            app:roundAsCircle="true"/>

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_nickname_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="@string/nickname"/>

        <TextView
            android:id="@id/modify_user_info_nickname_text"
            style="@style/ModifyUserInfoItemText"
            android:layout_alignParentRight="true"
            android:text="狂战士"/>

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_birthday_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="生日"/>

            <TextView
                android:id="@id/modify_user_info_birthday_text"
                style="@style/ModifyUserInfoItemText"
                android:text="1970-01-01"
                android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_gender_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="@string/gender"/>

            <TextView
                android:id="@id/modify_user_info_gender_text"
                style="@style/ModifyUserInfoItemText"
                android:layout_alignParentRight="true"
                android:text="男"
            />

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_height_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="@string/height"/>

            <TextView
                android:id="@id/modify_user_info_height_text"
                style="@style/ModifyUserInfoItemText"
                android:layout_alignParentRight="true"
                android:text="177cm"/>

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_weight_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="@string/weight"/>

            <TextView
                android:id="@id/modify_user_info_weight_text"
                style="@style/ModifyUserInfoItemText"
                android:layout_alignParentRight="true"
                android:text="75kg"/>

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

    <RelativeLayout
        android:id="@id/modify_user_info_location_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/modify_user_info_item_height">

        <TextView
            style="@style/ModifyUserInfoItemTitle"
            android:text="所在地"/>

            <TextView
                android:id="@id/modify_user_info_location_text"
                style="@style/ModifyUserInfoItemText"
                android:layout_alignParentRight="true"
                android:text="湖北 武汉"/>

    </RelativeLayout>

    <View style="@style/UnderLineStyle"/>

</LinearLayout>
