<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black01"
    tools:context=".userCenter.ui.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@id/tool_bar"
        style="@style/Toolbar">

        <include layout="@layout/layout_default_toolbar"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/setting_activity_set_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:layout_marginTop="@dimen/setting_activity_item_margin_top"
        android:background="@color/default_font_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lptiyu.tanke.widget.CustomTextView
                style="@style/SettingActivityItemTextBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_push_msg"/>

            <com.lptiyu.tanke.widget.SwitchButton
                android:id="@+id/setting_activity_msg_push"
                style="@style/SwitchButtonStyleMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/user_center_linear_layout_bottom_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/user_center_split_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lptiyu.tanke.widget.CustomTextView
                style="@style/SettingActivityItemTextBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_vibrate_mobile"/>

            <com.lptiyu.tanke.widget.SwitchButton
                android:id="@+id/setting_activity_mobile_vibrate"
                style="@style/SwitchButtonStyleMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/user_center_linear_layout_bottom_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/user_center_split_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lptiyu.tanke.widget.CustomTextView
                style="@style/SettingActivityItemTextBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_light_screen"/>

            <com.lptiyu.tanke.widget.SwitchButton
                android:id="@+id/setting_activity_screen_light"
                style="@style/SwitchButtonStyleMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/black01"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_activity_information_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_activity_set_block"
        android:layout_marginTop="@dimen/setting_activity_item_margin_top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lptiyu.tanke.widget.CustomTextView
                android:id="@+id/setting_activity_feedback"
                style="@style/SettingActivityItemTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_feedback"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/setting_activity_arrow_margin_right"
                android:src="@mipmap/arrow_left_black"/>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/user_center_linear_layout_bottom_line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/user_center_split_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.lptiyu.tanke.widget.CustomTextView
                android:id="@+id/setting_activity_about_us"
                style="@style/SettingActivityItemTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_about_us"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/setting_activity_arrow_margin_right"
                android:src="@mipmap/arrow_left_black"/>

        </RelativeLayout>

    </LinearLayout>

    <com.lptiyu.tanke.widget.CustomTextView
        android:id="@+id/setting_activity_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settting_activity_logout_height"
        android:layout_below="@id/setting_activity_information_block"
        android:layout_marginTop="@dimen/setting_activity_item_margin_top"
        android:background="@drawable/style_locate_activity_list_item"
        android:gravity="center"
        android:text="@string/setting_activity_logout"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/setting_activity_logout_text_size"/>

</RelativeLayout>
